fix overflow scroll

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-p, li {
-    max-width: 800px;
-    word-wrap: break-word;
+pre {
+  overflow-x: auto;
 }
